# TinyRenderSystem

./: .gitignore  1_3EachVertexColorFragment.glsl  1_4TextureColorFragment.glsl  1_5MultiTextureFragment.glsl  1_5MultiTextureVertex.glsl  2_1LightNodeFragment.glsl  2_1LightNodeVertex.glsl  2_1MaterialFragment.glsl  2_1MaterialVertex.glsl  2_2DiffuseNormFragment.glsl  2_3DirectionLightNormFragment.glsl  2_4PointAttenuationLightFragment.glsl  2_5SpotLightFragment.glsl  2_5SpotLightVertex.glsl  2_6MultiLightSourceFragment.glsl  3_1AssimpTextureFragment.glsl  3_1AssimpTextureVertex.glsl  AllDemoCodes.cpp  AllDemoCodes.h  BSpline.cpp  BSpline.h  BSplineSurface.cpp  BSplineSurface.h  CMakeLists.txt  CaseFreeType.cpp  CaseFreeType.h  CaseMatrixTransform.cpp  CaseMatrixTransform.h  CaseNurbsFaceToMesh.cpp  CaseNurbsFaceToMesh.h  CasePNTriangles.cpp  CasePNTriangles.h  CaseStencilTest.cpp  CaseStencilTest.h  CaseTessellationOnShader.cpp  CaseTessellationOnShader.h  CullVisitor.cpp  CullVisitor.h  DefaultFragment.glsl  DiffNormMaterialFragment.glsl  (+76 more)
OpenGL/Practice20140910_TeacherExample/: CMakeLists.txt
OpenGL/Practice20140910_TeacherExample/src/: main.cpp
PlainOpenGLExamples/: BasicUtils.cpp  BasicUtils.h  CMakeLists.txt  E00PlainOpenGL.cpp  E06StencilTest.cpp  E06StencilTest.h  main.cpp
PlainOpenGLExamples/E09FreeType/: E09FreeType.cpp  E09FreeType.h
PlainOpenGLExamples/RenderBasic/: CMakeLists.txt  E00PlainOpenGL.cpp  E00PlainOpenGL.h  RenderColorTriangle.cpp  RenderColorTriangle.h  RenderTexture.cpp  RenderTexture.h  RenderTriangle.cpp  RenderTriangle.h  ShadowMapping.cpp  ShadowMapping.h  StencilTest.cpp  StencilTest.h  TessellationOnShader.cpp  TessellationOnShader.h  main.cpp
PlainOpenGLExamples/RenderBasic/shaders/: 1_2ColorAnimationFragment.glsl  1_3EachVertexColorVertex.glsl  1_4TextureColorVertex.glsl  MultiTextureFragment.glsl  PosColorTexVertex.glsl  (+1 more)
PlainOpenGLExamples/RenderText/: CMakeLists.txt  RenderText.cpp  RenderText.h  main.cpp
PlainOpenGLExamples/glad/: glad.h
PlainOpenGLExamples/shaders/: 1_5MultiTextureVertex.glsl
TRSCore/: BSpline.cpp  BSpline.h  BSplineSurface.cpp  BSplineSurface.h  CMakeLists.txt  GLFWContext.cpp  GLFWContext.h  GeometryUtil.h  ObjUtils.cpp  TRSAssimpLoader.cpp  TRSAssimpLoader.h  TRSConst.h  TRSContext.h  TRSEventHandler.h  TRSGeode.cpp  TRSGeode.h  TRSGroup.cpp  TRSMatrix.h  TRSMesh.cpp  TRSNode.cpp  TRSNode.h  TRSResource.h  TRSShader.cpp  TRSShortcutKeyHandler.cpp  TRSShortcutKeyHandler.h  TRSTextNode.cpp  TRSTextNode.h  TRSUtils.cpp  TRSVAO.cpp  TRSVAO.h  TRSVector.h  TRSViewer.cpp  TRSViewer.h  TRSVisitors.cpp
TRSCore/shaders/: 1_5MultiTextureFragment.glsl  2_3DirectionLightNormFragment.glsl  BezierSurFaceTesc.glsl  DefaultFragment.glsl
TRSExamples/: CMakeLists.txt  E00PlainOpenGL.cpp  E00PlainOpenGL.h  E01TextureBox.cpp  E01TextureBox.h  E02BasicMaterial.cpp  E03BasicLight.cpp  E03BasicLight.h  E04ElementArray.h  E05LoadModelByAssimp.h  E07TessellationOnShader.cpp  E07TessellationOnShader.h  E08PNTriangles.cpp  E09FreeType.h  E10NurbsFaceToMesh.cpp  main.cpp
TRSExamples/DataExchange/: AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt  DataExchange.cpp  DataExchange.h  StepConverter.cpp  StepConverter.h
TRSExamples/GeometryTest/: CMakeLists.txt  main.cpp
TRSExamples/STEPExample/: CMakeLists.txt  StepConverter.cpp  StepConverter.h  main.cpp
TRSExamples/TRSApplication/: AppConst.h  CMakeLists.txt  ImportStep.cpp  ImportStep.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  SettingDialog.cpp  SettingDialog.h  UiSettingDialog.h  main.cpp
TRSExamples/TRSBasicDemo/: CMakeLists.txt  E01TextureBox.cpp  E02BasicMaterial.h  E05LoadModelByAssimp.cpp  E07TessellationOnShader.cpp  E08PNTriangles.h  E09FreeType.cpp  E10NurbsFaceToMesh.cpp  main.cpp
TRSExamples/TRSBasicExample/: CMakeLists.txt  E01TextureBox.cpp  E02BasicMaterial.cpp  E03BasicLight.cpp  E04ElementArray.cpp  E05LoadModelByAssimp.cpp  E06MeshPerformance.cpp  E06MeshPerformance.h  E07TessellationOnShader.cpp  E08PNTriangles.cpp  E09FreeType.cpp  E10NurbsFaceToMesh.cpp  E10NurbsFaceToMesh.h  GlfwApplication.cpp  GlfwApplication.h  VertexData.h  main.cpp
src/: CMakeLists.txt  CullVisitor.cpp  GLFWContext.cpp  GeometryUtil.cpp  NodeVisitor.cpp  TRSCamera.cpp  TRSCharacterTexture.cpp  TRSContext.cpp  TRSEventDispatcher.cpp  TRSEventHandler.cpp  TRSGeode.cpp  TRSGroup.cpp  TRSMatrix.cpp  TRSMesh.cpp  TRSNode.cpp  TRSResource.cpp  TRSShader.cpp  TRSShortcutKeyHandler.cpp  TRSStateSet.cpp  TRSTexture.cpp  TRSUtils.cpp  TRSVAO.cpp  TRSViewer.cpp  TRSVisitors.cpp
src/Camera/: TRSCamera.cpp  TRSDefaultCameraHandler.cpp
src/Core/: TRSBox.cpp  TRSCharacterTexture.cpp  TRSShader.cpp  TRSStateSet.cpp  TRSTexture.cpp  TRSViewer.cpp
src/DataModel/: TRSGeode.cpp  TRSGroup.cpp  TRSMesh.cpp  TRSNode.cpp  TRSTextNode.cpp
src/Event/: TRSEventDispatcher.cpp  TRSEventHandler.cpp  TRSShortcutKeyHandler.cpp
src/Geometry/: BSpline.cpp  BSplineSurface.cpp  CMakeLists.txt  GArc2d.cpp  GBSpline2d.cpp  GBSpline3d.cpp  GCurve2d.cpp  GCurve3d.cpp  GLine2d.cpp  GLine3d.cpp  GPoint2d.cpp  GPoint3d.cpp  GSurfaceCurve.cpp  Geometry.cpp  GeometryUtil.cpp  RefCount.cpp  TRSCube.cpp  TRSCylinder.cpp  TRSGeometry.cpp  TRSGrid.cpp
src/IO/: TRSAssimpLoader.cpp
src/Math/: BSpline.cpp  BSplineSurface.cpp  TRSMathUtil.cpp  TRSMatrix.cpp
src/TRS/: BSpline.cpp  BSplineSurface.cpp  CMakeLists.txt  CullVisitor.cpp  GeometryUtil.cpp  NodeVisitor.cpp  ObjUtils.cpp  TRSAssimpLoader.cpp  TRSAxis.cpp  TRSBox.cpp  TRSCamera.cpp  TRSCharacterTexture.cpp  TRSCube.cpp  TRSCylinder.cpp  TRSDefStruct.cpp  TRSDefaultCameraHandler.cpp  TRSDynamicText.cpp  TRSEventDispatcher.cpp  TRSEventHandler.cpp  TRSFontManager.cpp  TRSGeode.cpp  TRSGeometry.cpp  TRSGrid.cpp  TRSGroup.cpp  TRSMathUtil.cpp  TRSMatrix.cpp  TRSMesh.cpp  TRSMeshBuilder.cpp  TRSNode.cpp  TRSPrograms.cpp  TRSResource.cpp  TRSSettings.cpp  TRSShader.cpp  TRSShortcutKeyHandler.cpp  TRSStateSet.cpp  TRSTextNode.cpp  TRSTexture.cpp  TRSUtils.cpp  TRSVAO.cpp  TRSViewer.cpp  (+2 more)
src/Util/: CullVisitor.cpp  ObjUtils.cpp  TRSUtils.cpp
(+179 files in other folders)
