set(TRS_CORE TRSCore)
set(TARGET_NAME TRSExamples)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ThirdParty/glm-0.9.6.3)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ThirdParty/glfw-3.2.1/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ThirdParty/assimp-4.1.0/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ThirdParty/freetype-2.10.4/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${TRS_CORE})
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/ThirdParty/glfw-3.2.1/lib)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)


#FILE(GLOB Target_INCLUDE_LIST  ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/*.h)
#FILE(GLOB Target_SRC_LIST ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/*.cpp)
set(Target_INCLUDE_LIST
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E01TextureBox.h
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E02BasicMaterial.h
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E03BasicLight.h
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E04ElementArray.h
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E05LoadModelByAssimp.h
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E07TessellationOnShader.h
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E08PNTriangles.h
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E09FreeType.h
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E10NurbsFaceToMesh.h
    )
set(Target_SRC_LIST
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E01TextureBox.cpp
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E02BasicMaterial.cpp
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E03BasicLight.cpp
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E04ElementArray.cpp
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E05LoadModelByAssimp.cpp
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E07TessellationOnShader.cpp
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E08PNTriangles.cpp
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E09FreeType.cpp
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/E10NurbsFaceToMesh.cpp
    ${PROJECT_SOURCE_DIR}/${TARGET_NAME}/main.cpp
)
source_group("include" FILES ${Target_INCLUDE_LIST} )
source_group("src" FILES ${Target_SRC_LIST})
add_executable(${TARGET_NAME}  ${Target_INCLUDE_LIST} ${Target_SRC_LIST})
add_dependencies(${TARGET_NAME} ${TRS_CORE})

set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin")	
set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin")
set_target_properties(${TARGET_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set_target_properties(${TARGET_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
set_target_properties(${TARGET_NAME} PROPERTIES RELEASE_POSTFIX "${CMAKE_RELEASE_POSTFIX}")

SET(ADDITIONAL_LIBRARIES_DEBUG
glfw3d.lib
TRSCored.lib
)
SET(ADDITIONAL_LIBRARIES_RELEASE
glfw3.lib
TRSCore.lib
)
TARGET_LINK_LIBRARIES(${TARGET_NAME} debug "${ADDITIONAL_LIBRARIES_DEBUG}" optimized "${ADDITIONAL_LIBRARIES_RELEASE}")




